--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+  <h1 class="shadow">Text-shadow effect!</h1>
+  <hr>
+
+  <h1>Using the text-transform property</h1>
+  <p class="uppercase">This text is transformed to uppercase</p>
+  <p class="lowercase">This text is transformed to lowercase</p>
+  <p class="capitalize">This text is capitalized</p>
+  <hr>
+
+  <div>
+    <h1>text formatting</h1>
+    <p>This text is styled with some of the text formatting properties. The heading uses the text-align, text-transform, and color properties. The paragraph is indented, aligned, and the space between characters is specified. The underline is removed from this colored <a target="_blank" href="">"Try it Yourself"</a> link.</p>
+  </div>
+  <hr>
+
+<!--   <div class="ex1">This div is 300px wide</div>
+  <div class="ex2">The width of this div remains at 300px, in spite of the 50px of total left and right padding, because of the box-sizing: border-box property</div>
+  <hr> -->
+
   <h1 style="border:2px solid Tomato">Hello World</h1>
   <h1 style="border:2px solid DodgerBlue">Hello World</h1>
   <h1 style="border:2px solid Violet">Hello World</h1>
@@ -14,5 +33,6 @@
 
   <h1>My First CSS Example</h1>
   <p>This is a paragraph</p>
+
 </body>
 </html>
