--- a/index.html
+++ b/index.html
@@ -5,8 +5,92 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Practice CSS</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <script src="https://kit.fontawesome.com/6a28402afa.js" crossorigin="anonymous"></script>
 </head>
 <body>
+  <h1>Google icon library</h1>
+  <p>Some Google icons:</p>
+  <i class="material-icons">cloud</i>
+  <i class="material-icons">favorite</i>
+  <i class="material-icons">attachment</i>
+  <i class="material-icons">computer</i>
+  <i class="material-icons">traffic</i>
+  <br>
+
+  <p>Styled Google icons (size and color):</p>
+  <i class="material-icons" style="font-size:24px;">cloud</i>
+  <i class="material-icons" style="font-size:36px;">cloud</i>
+  <i class="material-icons" style="font-size:48px;color:red;">cloud</i>
+  <i class="material-icons" style="font-size:60px;color:lightblue;">cloud</i>
+  <hr>
+
+  <h1>Bootstrap icon library</h1>
+  <p>Some Bootstrap icons:</p>
+  <i class="glyphicon glyphicon-cloud"></i>
+  <i class="glyphicon glyphicon-remove"></i>
+  <i class="glyphicon glyphicon-user"></i>
+  <i class="glyphicon glyphicon-envelope"></i>
+  <i class="glyphicon glyphicon-thumbs-up"></i>
+  <br>
+
+  <p>Styled Bootstrap icons (size and color):</p>
+  <i class="glyphicon glyphicon-cloud" style="font-size:24px;"></i>
+  <i class="glyphicon glyphicon-cloud" style="font-size:36px;"></i>
+  <i class="glyphicon glyphicon-cloud" style="font-size:48px;color:red;"></i>
+  <i class="glyphicon glyphicon-cloud" style="font-size:60px;color:lightblue;"></i>
+  <hr>
+
+  <h1>Font Awesome icon library</h1>
+  <p>Some Font Awesome icons:</p>
+  <i class="fas fa-cloud"></i>
+  <i class="fas fa-heart"></i>
+  <i class="fas fa-car"></i>
+  <i class="fas fa-file"></i>
+  <i class="fas fa-bars"></i>
+  <hr>
+
+  <h1>The font Property</h1>
+  <p class="a">This is a paragraph. The font size is set to 20 pixels, and the font family is Arial.</p>
+  <p class="b">This is a paragraph. The font is set to italic, small-caps and bold, the font size is set to 12 pixels, the line height is set to 30 pixels, and the font family is Georgia.</p>
+  <hr>
+
+  <h1>This is a heading 1</h1>
+  <h2>This is a heading 2</h2>
+  <p>This is a paragraph</p>
+  <p>This is another paragraph</p>
+  <hr>
+
+  <h1>The font-variant property</h1>
+  <p class="normal">My name is Cong Le</p>
+  <p class="small">My name is Cong Le</p>
+  <hr>
+
+  <h1>The font-weight property</h1>
+  <p class="normal">This is a paragraph</p>
+  <p class="light">This is a paragraph</p>
+  <p class="thick">This is a paragraph</p>
+  <p class="thicker">This is a paragraph</p>
+  <hr>
+
+  <h1>The font-style property</h1>
+  <p class="normal">This is a paragraph in normal style</p>
+  <p class="italic">This is a paragraph in italic style</p>
+  <p class="oblique">This is a paragraph in oblique style</p>
+  <hr>
+
+  <h1>CSS Fallback Fonts</h1>
+  <p>This is a paragraph</p>
+  <p>This is another paragraph</p>
+  <hr>
+
+  <h1>CSS font-family</h1>
+  <p class="p1">This is a paragraph, shown in the Times New Roman font.</p>
+  <p class="p2">This is a paragraph, shown in the Arial font.</p>
+  <p class="p3">This is a paragraph, shown in the Lucida Console font.</p>
+  <hr>
+
   <h1 class="shadow">Text-shadow effect!</h1>
   <hr>
 
