--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <script src="https://kit.fontawesome.com/6a28402afa.js" crossorigin="anonymous"></script>
 </head>
 <body>
+  <h2>Overflow: visible</h2>
+
+  <p>By default, the overflow is visible, meaning that it is not clipped and it renders outside the element's box:</p>
+
+  <div>You can use the overflow property when you want to have better control of the layout. The overflow property specifies what happens if content overflows an element's box.</div>
+
   <h2>CSS Overflow</h2>
   <p>The overflow property controls what happens to content that is too big to fit into an area.</p>
 
