--- a/index.html
+++ b/index.html
@@ -8,7 +8,147 @@
   <script src="https://kit.fontawesome.com/6a28402afa.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <h2>Overflow: visible</h2>
+  <div class="header">
+    <h1>Chania</h1>
+  </div>
+
+  <div class="clearfix">
+    <div class="column menu">
+      <ul>
+        <li>The Flight</li>
+        <li>The City</li>
+        <li>The Island</li>
+        <li>The Food</li>
+      </ul>
+    </div>
+
+    <div class="column content">
+      <h1>The City</h1>
+      <p>Chania is the capital of the Chania region on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
+      <p>You will learn more about web layout and responsive web pages in a later chapter.</p>
+    </div>
+  </div>
+
+  <div class="footer">
+    <p>Footer Text</p>
+  </div>
+
+  <!-- <ul>
+    <li><a href="#home" class="active">Home</a></li>
+    <li><a href="#news">News</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><a href="#about">About</a></li>
+  </ul> -->
+
+  <!-- <h1>Flexible Boxes</h1>
+  <div class="flex-container">
+    <div class="box">
+      Box 1 - This is some text to make sure that the content gets really tall. This is some text to make sure that the content gets really tall.
+    </div>
+    <div class="box">
+      Box 2 - My height will follow Box 1.
+    </div>
+  </div>
+
+  <p>Try to resize the browser window to see the flexible layout.</p>
+  <p><strong>Note:</strong> Flexbox is not supported in Internet Explorer 10 or earlier versions.</p> -->
+
+  <!-- <h2>Equal Height Boxes</h2>
+  <p>Floating boxes with equal heights:</p>
+
+  <div class="clearfix">
+    <div class="box" style="background-color:#bbb">
+      <h2>Box 1</h2>
+      <p>Some content, some content, some content</p>
+    </div>
+    <div class="box" style="background-color:#ccc">
+      <h2>Box 2</h2>
+      <p>Some content, some content, some content</p>
+      <p>Some content, some content, some content</p>
+      <p>Some content, some content, some content</p>
+    </div>
+  </div>
+
+  <p>This example not very flexible. It is ok to use CSS height if you can guarantee that the boxes will always have the same amount of content in them, but that's not always the case. If you try the example above on a mobile phone (or resize the browser window), you will see that the second box's content will be displayed outside of the box.</p>
+  <p>Go back to the tutorial and find another solution, if this is not what you want.</p> -->
+
+  <!-- <h2>Images Side by Side</h2>
+  <p>Float images side by side:</p>
+
+  <div class="clearfix">
+    <div class="img-container">
+      <img src="img_5terre.jpg" alt="Italy" style="width:100%">
+    </div>
+    <div class="img-container">
+      <img src="img_forest.jpg" alt="Forest" style="width:100%">
+    </div>
+    <div class="img-container">
+      <img src="img_mountains.jpg" alt="Moutains" style="width:100%">
+    </div>
+  </div>
+
+  <p>Note that we also use the clearfix hack to take care of the layout flow, and that we add the box-sizing property to make sure that the image container doesn't break due to extra padding. Try to remove this code to see the effect.</p> -->
+
+  <!-- <h2>Grid of Boxes</h2>
+  <p>Float boxes side by side:</p>
+  <div class="clearfix">
+    <div class="box" style="background-color:#bbb">
+      <p>Some text inside the box.</p>
+    </div>
+    <div class="box" style="background-color:#ccc">
+      <p>Some text inside the box.</p>
+    </div>
+    <div class="box" style="background-color:#ddd">
+      <p>Some text inside the box.</p>
+    </div>
+  </div>
+
+  <p>
+    <strong>Note:</strong>
+    Here, we use the clearfix hack to take care of the layout flow. We also use the box-sizing property to make sure that the box doesn't break due to extra padding. Try to remove this code to see the effect.
+  </p> -->
+
+  <!-- <h2>Withour Clearfix</h2>
+  <p>This image is floated to the right. It is also taller than the element containing it, so it overflows outside of its container:</p>
+  <div>
+    <img src="pineapple.jpg" alt="Pineapple" width="170" height="170" class="img1">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet...
+  </div>
+
+  <h2 style="clear:right">With Clearfix</h2>
+  <p>We can fix this by adding a clearfix class with overflow: auto; to the containing element:</p>
+
+  <div class="clearfix">
+    <img src="pineapple.jpg" alt="Pineapple" width="170" height="170" class="img2">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet...
+  </div>
+
+  <h2>Without clear</h2>
+  <div class="div1">div1</div>
+  <div class="div2">div2 Notice that div2 is after div1 in the HTML code. However, since div1 floats to the left, the text in div2 flows around div1.</div>
+  <br><br>
+
+  <h2>With clear</h2>
+  <div class="div3">div3</div>
+  <div class="div4">div 4 - Here, clear: left; moves div4 down below the floating div3. The value "left" clears elements floated to the left. You can also clear "right" and "both".</div> -->
+
+<!--   <h2>Float Next To Each Other</h2>
+  <p>In this example, the three divs will float next to each other.</p>
+  <div class="div1">Div 1</div>
+  <div class="div2">Div 2</div>
+  <div class="div3">Div 3</div> -->
+
+<!--   <h2>Float Right</h2>
+  <p>In this example, the image will float to the right in the paragraph, and the text in the paragraph will wrap around the image.</p> -->
+
+  <!-- <p><img src="pineapple.jpg" alt="Pineapple" style="width:170px;height:170px;">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.
+  </p> -->
+
+  <!-- <h2>Overflow: visible</h2>
 
   <p>By default, the overflow is visible, meaning that it is not clipped and it renders outside the element's box:</p>
 
@@ -17,7 +157,7 @@
   <h2>CSS Overflow</h2>
   <p>The overflow property controls what happens to content that is too big to fit into an area.</p>
 
-  <div id="overflowTest">This text is really long and the height of its container is only 100 pixels. Therefore, a scrollbar is added to help the reader to scroll the content. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem.</div>
+  <div id="overflowTest">This text is really long and the height of its container is only 100 pixels. Therefore, a scrollbar is added to help the reader to scroll the content. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem.</div> -->
 
 <!--   <h1>Z-index Example</h1>
   <p>An element with greater stack order is always above an element with a lower stack order.</p>
