--- a/index.html
+++ b/index.html
@@ -8,7 +8,27 @@
   <script src="https://kit.fontawesome.com/6a28402afa.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="header">
+  <h1>Horizontal Navigation Links</h1>
+  <p>By default, list items are displayed vertically. In this example we use display: inline-block to display them horizontally (side by side).</p>
+  <p>Note: If you resize the browser window, the links will automatically break when it becomes too crowded.</p>
+  <ul class="nav">
+    <li><a href="#home">Home</a></li>
+    <li><a href="#about">About Us</a></li>
+    <li><a href="#clients">Our Clients</a></li>
+    <li><a href="#contact">Contact Us</a></li>
+  </ul>
+
+  <!-- <h1>The display Property</h1>
+  <h2>display: inline</h2>
+  <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum consequat scelerisque elit sit amet consequat. Aliquam erat volutpat. <span class="a">Aliquam</span> <span class="a">venenatis</span> gravida nisl sit amet facilisis. Nullam cursus fermentum velit sed laoreet. </div>
+
+  <h2>display: inline-block</h2>
+  <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum consequat scelerisque elit sit amet consequat. Aliquam erat volutpat. <span class="b">Aliquam</span> <span class="b">venenatis</span> gravida nisl sit amet facilisis. Nullam cursus fermentum velit sed laoreet. </div>
+
+  <h2>display: block</h2>
+  <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum consequat scelerisque elit sit amet consequat. Aliquam erat volutpat. <span class="c">Aliquam</span> <span class="c">venenatis</span> gravida nisl sit amet facilisis. Nullam cursus fermentum velit sed laoreet. </div> -->
+
+  <!-- <div class="header">
     <h1>Chania</h1>
   </div>
 
@@ -31,7 +51,7 @@
 
   <div class="footer">
     <p>Footer Text</p>
-  </div>
+  </div> -->
 
   <!-- <ul>
     <li><a href="#home" class="active">Home</a></li>
