--- a/index.html
+++ b/index.html
@@ -8,7 +8,84 @@
   <script src="https://kit.fontawesome.com/6a28402afa.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <h1>Horizontal Navigation Links</h1>
+  <h2>Flexbox Centering</h2>
+
+  <p>A container with both the justify-content and the align-items properties set to <em>center</em> will align the item(s) in the center (in both axis).</p>
+
+  <div class="center">
+    <p>I am vertically and horizontally centered.</p>
+  </div>
+
+  <!-- <h2>Center with position and transform</h2>
+
+  <p>In this example, we use positioning and the transform property to vertically and horizontally center the div element:</p>
+
+  <div class="center">
+    <p>I am vertically and horizontally centered.</p>
+  </div> -->
+
+  <!-- <h2>Center with line-height</h2>
+
+  <p>In this example, we use the line-height property with a value that is equal to the height property to center the div element:</p>
+
+  <div class="center">
+    <p>I am vertically and horizontally centered.</p>
+  </div> -->
+
+  <!-- <h2>Center vertically with padding</h2>
+
+  <p>In this example, we use the padding property to center the div element vertically:</p>
+
+  <div class="center">
+    <p>I am vertically centered.</p>
+  </div> -->
+
+  <!-- <h2>Without Clearfix</h2>
+
+  <p>This image is floated to the right. It is also taller than the element containing it, so it overflows outside of its container:</p>
+
+  <div>
+    <img src="pineapple.jpg" class="img1" alt="Pineapple" width="170" height="170">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet...
+  </div>
+
+  <h2 style="clear:right">With New Modern Clearfix</h2>
+  <p>Add the clearfix hack to the containing element, to fix this problem:</p>
+
+  <div class="clearfix">
+    <img src="pineapple.jpg" alt="Pineapple" class="img2" width="170" height="170">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet...
+  </div> -->
+
+  <!-- <h2>Right align with the float property</h2>
+
+  <p>An example of how to right align elements with the float property:</p>
+
+  <div class="right">
+    <p>In my younger and more vulnerable years my father gave me some advice that I've been turning over in my mind ever since.</p>
+  </div>
+ -->
+  <!-- <h2>Right align with the position property</h2>
+
+  <p>An example of how to right align elements with the position property:</p>
+
+  <div class="right">
+    <p>In my younger and more vulnerable years my father gave me some advice that I've been turning over in my mind ever since.</p>
+  </div> -->
+
+  <!-- <h2>Center an Image</h2>
+  <p>To center an image, set left and right margin to auto, and make it into a block element</p>
+  <img src="paris.jpg" alt="Paris" style="width:40%">
+  <br>
+
+  <h2>Center Align Elements</h2>
+  <p>To horizontally center a block element (like div), use margin: auto;</p>
+
+  <div class="center">
+    <p>Hello World!</p>
+  </div> -->
+
+  <!-- <h1>Horizontal Navigation Links</h1>
   <p>By default, list items are displayed vertically. In this example we use display: inline-block to display them horizontally (side by side).</p>
   <p>Note: If you resize the browser window, the links will automatically break when it becomes too crowded.</p>
   <ul class="nav">
@@ -16,7 +93,7 @@
     <li><a href="#about">About Us</a></li>
     <li><a href="#clients">Our Clients</a></li>
     <li><a href="#contact">Contact Us</a></li>
-  </ul>
+  </ul> -->
 
   <!-- <h1>The display Property</h1>
   <h2>display: inline</h2>
