--- a/index.html
+++ b/index.html
@@ -8,8 +8,44 @@
   <script src="https://kit.fontawesome.com/6a28402afa.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <p>Some text <q lang="no">A quote in a paragraph</q> Some text.</p>
-  <p>In this example, :lang defines the quotation marks for q elements with lang="no":</p>
+  <h1>Select some text on this page:</h1>
+
+  <p>This is a paragraph.</p>
+  <div>This is some text in a div element.</div>
+
+  <!-- <ul>
+    <li>Coffee</li>
+    <li>Tea</li>
+    <li>Milk</li>
+  </ul>
+
+  <ol>
+    <li>First</li>
+    <li>Second</li>
+    <li>Third</li>
+  </ol> -->
+
+  <!-- <h1>This is a heading</h1>
+  <p>The ::after pseudo-element inserts content after the content of an element.</p>
+
+  <h1>This is a heading</h1> -->
+
+ <!--  <h1>This is a heading</h1>
+  <p>The ::before pseudo-element inserts content before the content of an element.</p>
+
+  <h1>This is a heading</h1> -->
+
+  <!-- <p>You can combine the ::first-letter and ::first-line pseudo-elements to add a special effect to the first letter and the first line of a text!</p> -->
+
+  <!-- <p class="intro">This is an introduction.</p>
+  <p>This is a paragraph with some text. A bit more text even.</p> -->
+
+  <!-- <p>You can use the ::first-letter pseudo-element to add a special effect to the first character of a text!</p> -->
+
+  <!-- <p>You can use the ::first-line pseudo-element to add a special effect to the first line of a text. Some more text. And even more, and more, and more, and more, and more, and more, and more, and more, and more, and more, and more, and more.</p> -->
+
+  <!-- <p>Some text <q lang="no">A quote in a paragraph</q> Some text.</p>
+  <p>In this example, :lang defines the quotation marks for q elements with lang="no":</p> -->
 
   <!-- <p>I am a <i>strong</i> person. I am a <i>strong</i> person.</p>
   <p>I am a <i>strong</i> person. I am a <i>strong</i> person.</p>
