--- a/index.html
+++ b/index.html
@@ -8,10 +8,35 @@
   <script src="https://kit.fontawesome.com/6a28402afa.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <h1>Select some text on this page:</h1>
+  <div class="background">
+    <div class="transbox">
+      <p>This is some text that is placed in the transparent box.</p>
+    </div>
+  </div>
+  <!-- <h1>Transparent Box</h1>
+  <p>When using the opacity property to add transparency to the background of an element, all of its child elements become transparent as well. This can make the text inside a fully transparent element hard to read:</p>
+
+  <div class="first"><p>opacity 0.1</p></div>
+  <div class="second"><p>opacity 0.3</p></div>
+  <div class="third"><p>opacity 0.6</p></div>
+  <div><p>opacity 1 (default)</p></div>
+ -->
+  <!-- <h1>Image Transparency</h1>
+  <p>The opacity property is often used together with the :hover selector to change the opacity on mouse-over:</p>
+  <img src="img_forest.jpg" alt="Forest" width="170" height="100">
+  <img src="img_mountains.jpg" alt="Mountains" width="170" height="100">
+  <img src="img_5terre.jpg" alt="Italy" width="170" height="100"> -->
+
+  <!-- <h1>Image Transparency</h1>
+  <p>The opacity property specifies the transparency of an element. The lower the value, the more transparent:</p>
+
+  <p>Image with 50% opacity:</p>
+  <img src="img_forest.jpg" alt="Forest" width="170" height="100"> -->
+
+  <!-- <h1>Select some text on this page:</h1>
 
   <p>This is a paragraph.</p>
-  <div>This is some text in a div element.</div>
+  <div>This is some text in a div element.</div> -->
 
   <!-- <ul>
     <li>Coffee</li>
