--- a/index.html
+++ b/index.html
@@ -8,7 +8,56 @@
   <script src="https://kit.fontawesome.com/6a28402afa.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="header">
+  <h2>Aligned Dropdown Content</h2>
+  <p>Determine whether the dropdown content should go from left to right or right to left with the left and right properties.</p>
+
+  <div class="dropdown" style="float:left;">
+    <button class="dropbtn">
+      Left
+    </button>
+    <div class="dropdown-content" style="left:0;">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div>
+
+  <div class="dropdown" style="float:right;">
+    <button class="dropbtn">
+      Right
+    </button>
+    <div class="dropdown-content" style="right:0;">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div>
+
+  <!-- <h2>Dropdown Menu</h2>
+  <p>Move the mouse over the button to open the dropdown menu.</p>
+
+  <div class="dropdown">
+    <button class="dropbtn">
+      Dropdown
+    </button>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div> -->
+
+  <!-- <h2>Hoverable Dropdown</h2>
+  <p>Move the mouse over the text below to open the dropdown content.</p>
+
+  <div class="dropdown">
+    <span>Mouse over me</span>
+    <div class="dropdown-content">
+      <p>Hello World!</p>
+    </div>
+  </div> -->
+
+  <!-- <div class="header">
     <h2>Scroll Down</h2>
     <p>Scroll down to see the sticky effect.</p>
   </div>
@@ -29,7 +78,7 @@
   <p>Some text to enable scrolling. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
   <p>Some text to enable scrolling. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
   <p>Some text to enable scrolling. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+  <p>Some text to enable scrolling. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p> -->
 
   <!-- <div style="padding:20px;margin-top:30px;background-color:#1abc9c;height:1500px;">
     <h1>Fixed Top Navigation Bar</h1>
