--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
   <script src="https://kit.fontawesome.com/6a28402afa.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <h2>Responsive Image Gallery</h2>
+  <ul id="navlist">
+    <li id="home"><a href="default.asp"></a></li>
+    <li id="prev"><a href="css_intro.asp"></a></li>
+    <li id="next"><a href="css_syntax.asp"></a></li>
+  </ul>
+
+  <!-- <img id="home" src="img_trans.gif" width="1" height="1">
+  <img id="next" src="img_trans.gif" width="1" height="1"> -->
+
+  <!-- <h2>Responsive Image Gallery</h2>
 
   <h4>Resize the browser window to see the effect.</h4>
 
@@ -53,7 +62,7 @@
   <div style="padding:6px;">
     <p>This example use media queries to re-arrange the images on different screen sizes: for screens larger than 700px wide, it will show four images side by side, for screens smaller than 700px, it will show two images side by side. For screens smaller than 500px, the images will stack vertically (100%).</p>
     <p>You will learn more about media queries and responsive web design later in our CSS Tutorial.</p>
-  </div>
+  </div> -->
 
   <!-- <div class="gallery">
     <a target="_blank" href="img_5terre.jpg">
