--- a/index.html
+++ b/index.html
@@ -8,11 +8,26 @@
   <script src="https://kit.fontawesome.com/6a28402afa.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <ul id="navlist">
+  <h2>Styling Forms</h2>
+
+  <form name="input" action="" method="get">
+    Firstname:<input type="text" name="Name" value="Cong" size="20">
+    Lastname:<input type="text" name="Name" value="Le" size="20">
+    <input type="button" value="Example Button">
+  </form>
+
+  <!-- <h2>CSS [attribute] Selector</h2>
+  <p>The links with a target attribute gets a yellow background:</p>
+
+  <a href="https://www.w3schools.com">w3schools.com</a>
+  <a href="http://www.disney.com" target="_blank">disney.com</a>
+  <a href="http://www.wikipedia.org" target="_top">wikipedia.org</a> -->
+
+<!--   <ul id="navlist">
     <li id="home"><a href="default.asp"></a></li>
     <li id="prev"><a href="css_intro.asp"></a></li>
     <li id="next"><a href="css_syntax.asp"></a></li>
-  </ul>
+  </ul> -->
 
   <!-- <img id="home" src="img_trans.gif" width="1" height="1">
   <img id="next" src="img_trans.gif" width="1" height="1"> -->
